FIXED BUGS * nav not sticky on iphone * champlain n wrapped below * TODO: Broken pdf link on deploy branch

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -91,9 +91,16 @@
     }
 }
 
+.edu-item {
+    @media screen and (max-width: 475px) {
+        flex-grow: 1 !important;
+        max-width: 100% !important;
+    }
+}
+
 .desc {
     @media screen and (max-width: 475px) {
-        flex-grow: 1;
+        flex-grow: 1 !important;
         max-width: 100% !important;
     }
 }
