--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -14,6 +14,7 @@
     padding: 15px 10px;
     box-shadow: 0 0 5px 0 rgba(0,0,0,.26);
     font-size: 125%;
+    position: fixed;
     //border-bottom: 1px solid $accent;
     @media screen and (max-width: 700px) {
         padding: 10px !important;
